--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -58,7 +58,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
         
-      - name: Generate staging image tag
+      - name: Generate Development image tag
         id: generate-tag
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
