Update CI/CD workflows to specify branch references for development, staging, and production environments.

--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           repository: 'Greatify/ExamX-V2-Frontend'
           fetch-depth: 0
-          ref: ${{ github.ref_name }}
+          ref: dev
           token: ${{ secrets.REPO_DISPATCH_TOKEN }}
 
       - name: Configure AWS credentials for ECR
