--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -7,6 +7,10 @@ on:
         description: 'Enter deployment password'
         required: true
         type: string
+      deploy_branch:
+        description: 'Enter branch name to deploy'
+        required: true
+        type: string
         
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -65,8 +69,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: 'main'
-          # ref: 'stg'
+          ref: ${{ github.event.inputs.deploy_branch }}
           repository: 'Greatify/ExamX-V2-Frontend'
           token: ${{ secrets.REPO_DISPATCH_TOKEN }}
           unprotect_reviews: true
