--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-password:
+  security-password-check:
     runs-on: ubuntu-latest
     steps:
       - name: Verify deployment password
@@ -33,7 +33,7 @@ jobs:
           fi
           echo "Password verified successfully"
 
-      - name: Slack Notification on Wrong Password
+      - name: Send unauthorized attempt alert
         if: steps.password-check.outcome == 'failure'
         uses: 8398a7/action-slack@v3
         with:
@@ -55,18 +55,19 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-      - name: Final Password Check
+      - name: Block deployment on invalid password
         if: steps.password-check.outcome == 'failure'
         run: |
           echo "::error::Authentication failed - Deployment blocked"
           exit 1
 
-  build-frontend-prod-image:
-    needs: check-password 
+  build-frontend-production-image:
+    needs: security-password-check 
     runs-on: ubuntu-latest
     environment: prod
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ github.event.inputs.deploy_branch }}
@@ -81,8 +82,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Moved the secrets fetch before npm install
-      - name: Fetch secrets from AWS Secrets Manager
+      - name: Fetch environment secrets from AWS
         id: fetch-secrets
         run: |
           aws secretsmanager get-secret-value \
@@ -113,12 +113,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Generate Production image tag
+      - name: Generate production image tag
         id: generate-tag
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
           COMMIT_ID=$(git rev-parse HEAD)
-          IMAGE_TAG="Prod-${TIMESTAMP}-${COMMIT_ID}"
+          IMAGE_TAG="prod-${TIMESTAMP}-${COMMIT_ID}"
           
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
           echo "Generated Image Tag: $IMAGE_TAG"
@@ -131,7 +131,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
   
-      - name: Build and push Frontend Docker image to ECR
+      - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -143,7 +143,7 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
   
-      - name: Move new cache to cache directory
+      - name: Move cache directory
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
@@ -159,10 +159,10 @@ jobs:
           path: frontend_image_tag.txt
           if-no-files-found: error
 
-      - name: Cleanup .env File
+      - name: Cleanup environment files
         run: rm -f .env
 
-      - name: Slack Notification on Docker Build Failure
+      - name: Send Docker build failure notification
         if: failure()
         uses: 8398a7/action-slack@v3
         with:
@@ -181,12 +181,13 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-  deploy-frontend:
+  deploy-frontend-production:
     runs-on: ubuntu-latest
-    needs: [build-frontend-prod-image]
-    environment: Prod
+    needs: [build-frontend-production-image]
+    environment: prod
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout deployment repository
+        uses: actions/checkout@v4
         with:
           repository: 'Greatify/ExamX-V2-Frontend-Deployment'
           ref: 'main'
@@ -202,12 +203,12 @@ jobs:
         run: |
           echo "FRONTEND_IMAGE=$(cat frontend_image_tag.txt)" >> $GITHUB_ENV
 
-      - name: Update Frontend React deployment image tag
+      - name: Update deployment image tag in Kustomization
         run: |
           # Update the image tag in the deployment patch
           sed -i 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|' k8s/overlays/prod/kustomization.yaml
 
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
           git config --local user.email "hariharen@greatify.ai"
           git config --local user.name "Hariharen"
@@ -222,21 +223,21 @@ jobs:
       #     branch: ${{ github.ref_name }}
       #     unprotect_reviews: true
 
-      - name: Configure AWS credentials
+      - name: Configure AWS credentials for deployment
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Update kube config
+      - name: Update Kubernetes configuration
         run: aws eks update-kubeconfig --name greatify-production-cluster --region ap-south-1
 
-      - name: Apply Kubernetes configuration to Production
+      - name: Deploy to production environment
         run: |
           kubectl apply -k k8s/overlays/prod
 
-      - name: Slack Notification on Successful Deployment
+      - name: Send deployment success notification
         if: success()
         uses: 8398a7/action-slack@v3
         with:
