Refactor CI/CD workflows to enhance job naming consistency
- Renamed deployment and build jobs for frontend across development, staging, and production workflows for clarity (e.g., 'deploy-development' to 'deploy-frontend-dev').
- Updated job names to reflect their specific purposes more accurately.

--- a/.github/workflows/ci-cd-dev.yaml
+++ b/.github/workflows/ci-cd-dev.yaml
@@ -74,7 +74,7 @@ jobs:
           author_name: ExamX-V2-CICD
           mention: ${{ github.actor }}
           if_mention: success
-          job_name: deploy-development
+          job_name: deploy-frontend-dev
           channel: examxv2-frontend-alerts
           username: ExamX-V2-CICD
           text: |
