--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -171,7 +171,7 @@ jobs:
           author_name: Docker Build Failure 🐳
           mention: ${{ github.actor }}
           if_mention: always
-          job_name: docker-build
+          job_name: build-frontend-production-image
           channel: examxv2-frontend-alerts
           username: ExamX-V2-CICD
           text: |
@@ -246,7 +246,7 @@ jobs:
           author_name: Frontend Deployment Success
           mention: channel
           if_mention: success
-          job_name: deploy-production
+          job_name: deploy-frontend-production
           channel: examxv2-frontend-alerts
           username: ExamX-V2-CICD
           text: |
