Optimize Docker build caching and compression settings in CI/CD workflow

--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -107,7 +107,10 @@ jobs:
             [registry."docker.io"]
               mirrors = ["mirror.gcr.io"]
             [worker.oci]
-              max-parallelism = 12
+              max-parallelism = 16
+              gc = true
+              [worker.oci.snapshotter]
+                compression-level = 1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -138,11 +141,17 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}
           platforms: linux/amd64
-          build-args: 
+          build-args: |
             ENV_FILE=.env
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-  
+            BUILDKIT_INLINE_CACHE=1
+            NODE_ENV=production
+          cache-from: |
+            type=local,src=/tmp/.buildx-cache
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:build-cache
+          cache-to: |
+            type=local,dest=/tmp/.buildx-cache-new,mode=max
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:build-cache,mode=max
+          outputs: type=image,compression=zstd,compression-level=3,force-compression=true
       - name: Move cache directory
         run: |
           rm -rf /tmp/.buildx-cache
