--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -103,11 +103,6 @@ jobs:
             --debug
             --allow-insecure-entitlement security.insecure
             --allow-insecure-entitlement network.host
-          config-inline: |
-            [registry."docker.io"]
-              mirrors = ["mirror.gcr.io"]
-            [worker.oci]
-              max-parallelism = 12
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -130,7 +125,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-  
+
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
         with:
@@ -138,11 +133,16 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}
           platforms: linux/amd64
-          build-args: 
+          build-args: |
             ENV_FILE=.env
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-  
+            NODE_ENV=production
+          cache-from: |
+            type=local,src=/tmp/.buildx-cache
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:build-cache
+          cache-to: |
+            type=local,dest=/tmp/.buildx-cache-new
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:build-cache,mode=max
+
       - name: Move cache directory
         run: |
           rm -rf /tmp/.buildx-cache
@@ -176,7 +176,7 @@ jobs:
           username: ExamX-V2-CICD
           text: |
             ❌ *Docker build failed* 🐳
-            *Pusher:* `${{ github.actor }}`
+            *Pusher:* `${{ github.actor }}`   
             Please fix the Docker build issues.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
