--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -122,7 +122,7 @@ patches:
               # Content Security Policy
               add_header Content-Security-Policy "
                   default-src 'self' data: blob:;
-                  script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval'
+                  script-src 'self'
                       https://accounts.google.com 
                       https://*.posthog.com 
                       https://*.i.posthog.com 
@@ -132,7 +132,7 @@ patches:
                       https://cdn.jsdelivr.net 
                       https://cdn.jsdelivr.net/npm/monaco-editor@0.52.2/ 
                       blob:;
-                  style-src 'self' 'unsafe-inline'
+                  style-src 'self'
                       https://fonts.googleapis.com 
                       https://accounts.google.com 
                       https://cdnjs.cloudflare.com 
