--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -99,15 +99,28 @@ jobs:
           version: v0.12.0
           driver-opts: |
             image=moby/buildkit:v0.12.0
+            network=host
           buildkitd-flags: |
             --debug
             --allow-insecure-entitlement security.insecure
             --allow-insecure-entitlement network.host
+            --oci-worker-gc
           config-inline: |
             [registry."docker.io"]
               mirrors = ["mirror.gcr.io"]
             [worker.oci]
-              max-parallelism = 12
+              max-parallelism = 16
+              gc = true
+              [worker.oci.compression]
+                level = 5
+                type = "zstd"
+            [worker.containerd]
+              gc = true
+              [worker.containerd.gc]
+                policy = ["*:30h"]
+            [registry."${{ steps.login-ecr.outputs.registry }}"]
+              cache-from = true
+              cache-to = true
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -138,10 +151,18 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}
           platforms: linux/amd64
-          build-args: 
+          build-args: |
             ENV_FILE=.env
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+            BUILDKIT_INLINE_CACHE=1
+            NODE_ENV=production
+          cache-from: |
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache
+            type=local,src=/tmp/.buildx-cache
+          cache-to: |
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache,mode=max
+            type=local,dest=/tmp/.buildx-cache-new
+          compression: zstd
+          compression-level: 5
   
       - name: Move cache directory
         run: |
@@ -162,96 +183,96 @@ jobs:
       - name: Cleanup environment files
         run: rm -f .env
 
-      - name: Send Docker build failure notification
-        if: failure()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,eventName,ref,workflow
-          author_name: Docker Build Failure 🐳
-          mention: ${{ github.actor }}
-          if_mention: always
-          job_name: build-frontend-staging-image
-          channel: examxv2-frontend-alerts
-          username: ExamX-V2-CICD
-          text: |
-            ❌ *Docker build failed* 🐳
-            *Pusher:* `${{ github.actor }}`
-            Please fix the Docker build issues.
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #     - name: Send Docker build failure notification
+  #       if: failure()
+  #       uses: 8398a7/action-slack@v3
+  #       with:
+  #         status: ${{ job.status }}
+  #         fields: repo,message,commit,eventName,ref,workflow
+  #         author_name: Docker Build Failure 🐳
+  #         mention: ${{ github.actor }}
+  #         if_mention: always
+  #         job_name: build-frontend-staging-image
+  #         channel: examxv2-frontend-alerts
+  #         username: ExamX-V2-CICD
+  #         text: |
+  #           ❌ *Docker build failed* 🐳
+  #           *Pusher:* `${{ github.actor }}`
+  #           Please fix the Docker build issues.
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-  deploy-frontend-staging:
-    runs-on: ubuntu-latest
-    needs: [build-frontend-staging-image]
-    environment: stg
-    steps:
-      - name: Checkout deployment repository
-        uses: actions/checkout@v4
-        with:
-          repository: 'Greatify/ExamX-V2-Frontend-Deployment'
-          ref: 'main'
-          fetch-depth: 0
+  # deploy-frontend-staging:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-frontend-staging-image]
+  #   environment: stg
+  #   steps:
+  #     - name: Checkout deployment repository
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: 'Greatify/ExamX-V2-Frontend-Deployment'
+  #         ref: 'main'
+  #         fetch-depth: 0
           
-      - name: Download image tag files
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-image-tag
-          path: .
+  #     - name: Download image tag files
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: frontend-image-tag
+  #         path: .
 
-      - name: Set image tags as environment variables
-        run: |
-          echo "FRONTEND_IMAGE=$(cat frontend_image_tag.txt)" >> $GITHUB_ENV
+  #     - name: Set image tags as environment variables
+  #       run: |
+  #         echo "FRONTEND_IMAGE=$(cat frontend_image_tag.txt)" >> $GITHUB_ENV
 
-      - name: Update deployment image tag in Kustomization
-        run: |
-          # Update the image tag in the deployment patch
-          sed -i 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|' k8s/overlays/stg/kustomization.yaml
+  #     - name: Update deployment image tag in Kustomization
+  #       run: |
+  #         # Update the image tag in the deployment patch
+  #         sed -i 's|image: "[^"]*"|image: "'"$FRONTEND_IMAGE"'"|' k8s/overlays/stg/kustomization.yaml
           
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "hariharen@greatify.ai"
-          git config --local user.name "Hariharen"
-          git add k8s/overlays/stg/kustomization.yaml
-          git commit -m "Update image tags for stg deployment"
-          git push origin main
+  #     - name: Commit and push changes
+  #       run: |
+  #         git config --local user.email "hariharen@greatify.ai"
+  #         git config --local user.name "Hariharen"
+  #         git add k8s/overlays/stg/kustomization.yaml
+  #         git commit -m "Update image tags for stg deployment"
+  #         git push origin main
 
-      # - name: Push to protected branch
-      #   uses: CasperWA/push-protected@v2
-      #   with:
-      #     token: ${{ secrets.PAT_TOKEN }}
-      #     branch: ${{ github.ref_name }}
-      #     unprotect_reviews: true
+  #     # - name: Push to protected branch
+  #     #   uses: CasperWA/push-protected@v2
+  #     #   with:
+  #     #     token: ${{ secrets.PAT_TOKEN }}
+  #     #     branch: ${{ github.ref_name }}
+  #     #     unprotect_reviews: true
 
-      - name: Configure AWS credentials for deployment
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+  #     - name: Configure AWS credentials for deployment
+  #       uses: aws-actions/configure-aws-credentials@v3
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Update Kubernetes configuration
-        run: aws eks update-kubeconfig --name dev-stg-cluster --region ap-south-1
+  #     - name: Update Kubernetes configuration
+  #       run: aws eks update-kubeconfig --name dev-stg-cluster --region ap-south-1
 
-      - name: Deploy to staging environment
-        run: |
-          kubectl apply -k k8s/overlays/stg
+  #     - name: Deploy to staging environment
+  #       run: |
+  #         kubectl apply -k k8s/overlays/stg
 
-      - name: Send deployment success notification
-        if: success()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,eventName,ref,workflow
-          author_name: Frontend Deployment Success
-          mention: channel
-          if_mention: success
-          job_name: deploy-frontend-staging
-          channel: examxv2-frontend-alerts
-          username: ExamX-V2-CICD
-          text: |
-            :rocket: *Frontend deployment to stg environment succeeded*         
-            *Pusher:* `${{ github.actor }}`   
-            The changes have been successfully deployed to the staging environment. Please verify the deployment and conduct necessary tests.
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #     - name: Send deployment success notification
+  #       if: success()
+  #       uses: 8398a7/action-slack@v3
+  #       with:
+  #         status: ${{ job.status }}
+  #         fields: repo,message,commit,eventName,ref,workflow
+  #         author_name: Frontend Deployment Success
+  #         mention: channel
+  #         if_mention: success
+  #         job_name: deploy-frontend-staging
+  #         channel: examxv2-frontend-alerts
+  #         username: ExamX-V2-CICD
+  #         text: |
+  #           :rocket: *Frontend deployment to stg environment succeeded*         
+  #           *Pusher:* `${{ github.actor }}`   
+  #           The changes have been successfully deployed to the staging environment. Please verify the deployment and conduct necessary tests.
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
