--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -108,15 +108,23 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Generate production image tag
+      - name: Generate production image tag and metadata
         id: generate-tag
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-          COMMIT_ID=$(git rev-parse HEAD)
-          IMAGE_TAG="prod-${TIMESTAMP}-${COMMIT_ID}"
+          SOURCE_COMMIT_ID="${{ github.event.after }}"
+          SOURCE_COMMIT_MSG="${{ github.event.head_commit.message }}"
           
+          IMAGE_TAG="prod-${TIMESTAMP}-${SOURCE_COMMIT_ID}"
+          
+          # Save metadata
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo "SOURCE_COMMIT_ID=$SOURCE_COMMIT_ID" >> $GITHUB_OUTPUT
+          echo "SOURCE_COMMIT_MSG=$SOURCE_COMMIT_MSG" >> $GITHUB_OUTPUT
+          
           echo "Generated Image Tag: $IMAGE_TAG"
+          echo "Source Commit: $SOURCE_COMMIT_ID"
+          echo "Source Message: $SOURCE_COMMIT_MSG"
 
       - name: Cache Docker layers
         uses: actions/cache@v3
@@ -138,10 +146,12 @@ jobs:
             BUILDKIT_INLINE_CACHE=1
             NODE_ENV=production
           cache-from: |
-            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:cache-${{ github.sha }}
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:cache-latest
             type=local,src=/tmp/.buildx-cache
           cache-to: |
-            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache,mode=max
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:cache-${{ github.sha }}
+            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:cache-latest,mode=max
             type=local,dest=/tmp/.buildx-cache-new
           compression: zstd
           compression-level: 5
@@ -254,7 +264,11 @@ jobs:
           username: ExamX-V2-CICD
           text: |
             :rocket: *Frontend deployment to production environment succeeded*         
-            *Pusher:* `${{ github.actor }}`   
+            *Pusher:* `${{ github.actor }}`
+            *Source Commit:* `${{ steps.generate-tag.outputs.SOURCE_COMMIT_ID }}`
+            *Source Message:* ${{ steps.generate-tag.outputs.SOURCE_COMMIT_MSG }}
+            *Image Tag:* `${{ steps.generate-tag.outputs.IMAGE_TAG }}`
+            
             The changes have been successfully deployed to the Production environment. Please verify the deployment and conduct necessary tests.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
