--- a/.github/workflows/ci-cd-prod.yaml
+++ b/.github/workflows/ci-cd-prod.yaml
@@ -12,9 +12,9 @@ on:
         required: true
         type: string
         
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.ref }}
+#   cancel-in-progress: true
 
 jobs:
   security-password-check:
@@ -103,28 +103,25 @@ jobs:
             --debug
             --allow-insecure-entitlement security.insecure
             --allow-insecure-entitlement network.host
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["mirror.gcr.io"]
+            [worker.oci]
+              max-parallelism = 12
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Generate production image tag and metadata
+      - name: Generate production image tag
         id: generate-tag
         run: |
           TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-          SOURCE_COMMIT_ID=$(git rev-parse HEAD)
-          SOURCE_COMMIT_MSG=$(git log -1 --pretty=format:%s)
+          COMMIT_ID=$(git rev-parse HEAD)
+          IMAGE_TAG="prod-${TIMESTAMP}-${COMMIT_ID}"
           
-          IMAGE_TAG="prod-${TIMESTAMP}-${SOURCE_COMMIT_ID}"
-          
-          # Save metadata
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "SOURCE_COMMIT_ID=$SOURCE_COMMIT_ID" >> $GITHUB_OUTPUT
-          echo "SOURCE_COMMIT_MSG=$SOURCE_COMMIT_MSG" >> $GITHUB_OUTPUT
-          
           echo "Generated Image Tag: $IMAGE_TAG"
-          echo "Source Commit: $SOURCE_COMMIT_ID"
-          echo "Source Message: $SOURCE_COMMIT_MSG"
 
       - name: Cache Docker layers
         uses: actions/cache@v3
@@ -141,19 +138,10 @@ jobs:
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}
           platforms: linux/amd64
-          build-args: |
+          build-args: 
             ENV_FILE=.env
-            BUILDKIT_INLINE_CACHE=1
-            NODE_ENV=production
-          cache-from: |
-            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache
-            type=local,src=/tmp/.buildx-cache
-          cache-to: |
-            type=registry,ref=${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:buildcache,mode=max
-            type=local,dest=/tmp/.buildx-cache-new
-          provenance: false
-          compression: zstd
-          compression-level: 5
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
   
       - name: Move cache directory
         run: |
@@ -263,11 +251,7 @@ jobs:
           username: ExamX-V2-CICD
           text: |
             :rocket: *Frontend deployment to production environment succeeded*         
-            *Pusher:* `${{ github.actor }}`
-            *Source Commit:* `${{ steps.generate-tag.outputs.SOURCE_COMMIT_ID }}`
-            *Source Message:* ${{ steps.generate-tag.outputs.SOURCE_COMMIT_MSG }}
-            *Image Tag:* `${{ steps.generate-tag.outputs.IMAGE_TAG }}`
-            
+            *Pusher:* `${{ github.actor }}`   
             The changes have been successfully deployed to the Production environment. Please verify the deployment and conduct necessary tests.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
