--- a/k8s/base/deployment/frontend-deploy.yaml
+++ b/k8s/base/deployment/frontend-deploy.yaml
@@ -40,3 +40,25 @@ spec:
             - name: nginx-configuration
               mountPath: /etc/nginx/nginx.conf
               subPath: ngnix.conf
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /index.html
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+          startupProbe:
+            httpGet:
+              path: /health
+              port: 80
+            failureThreshold: 30
+            periodSeconds: 10
